2009-04-08  David Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler

        Make sure that cloneNode works with SVG attributes that require synchronization.  This fixes
        issues with <use> element shadow tree cloning where the clones can end up not obtaining the
        correct attribute values.

        A subsequent patch of mine will expose this problem and cause it to be covered by existing
        layout tests, so no test is required at this time for this problem.

        * dom/Element.cpp:
        (WebCore::Element::cloneElementWithoutChildren):

2009-04-08  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Timothy Hatcher.

        https://bugs.webkit.org/show_bug.cgi?id=25093
        REGRESSION: some scripts are showing in the Inspector with only "true"
        as the source.

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didParseSource): Fixed conversion issue.
        (WebCore::InspectorController::failedToParseSource): Ditto.

2009-04-08  Adam Barth  <abarth@webkit.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24904

        Verify the MIME type of stylesheets (in standards mode) by looking
        at the Content-Type header directly.  This bypasses any content
        sniffing that might be confusing the issue.

        Test: http/tests/mime/standard-mode-loads-stylesheet-without-content-type-header.html

        * loader/CachedCSSStyleSheet.cpp:
        (WebCore::CachedCSSStyleSheet::canUseSheet):

2009-04-08  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=25041
        <rdar://problem/6697754>
        Bug 25041: HTMLMediaElement: OSX autoplay broken by r41907
        
        OSX media player should set readyState to HAVE_ENOUGH_DATA when the movie's load state
        reaches QTMovieLoadStatePlaythroughOK, not when the entire file has been downloaded,